# lobica-chatapi

./: README.md
chatapi/: pyproject.toml
chatapi/chatapi/: __main__.py  settings.py
chatapi/chatapi/ai/: __init__.py  assistant.py  client.py  memory.py
chatapi/chatapi/api/: routes.py  schemas.py
