[tool.poetry]
name = "chatapi"
version = "0.1.0"
description = ""
authors = ["Andres Javier Lopez <code@andresjavierlopez.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.5"
python-dotenv = "^1.0.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
langchain = "^0.0.345"
langserve = "^0.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
